--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -469,6 +469,7 @@
       "appraisalTimeRequest": "date"
     },
     messages: {
+      "solicitante": "Campo requerido",
       "addressStreet": "Campo requerido",
       "addressNumber": "Requerido",
       "addressCommune": "Campo requerido",
