--- a/web/user/templates/user/password_change.html
+++ b/web/user/templates/user/password_change.html
@@ -1,4 +1,5 @@
 {% extends 'list/base.html' %}
+{% load custom_tags %}
 
 {% block content %}
 <div class="container">
@@ -6,11 +7,32 @@
 		<div class="card-body">
 			<h5 class="card-title">Cambiar contraseña</h5>
 			<form method='post' action=''>{% csrf_token %}
-				{{ form.as_p }}
+				<tr>
+                    <td>{{ form.old_password.errors }}
+                        <label for="id_old_password">Contraseña Actual:</label></td>
+                    <td>{{ form.old_password }}</td>
+                </tr>
+				<tr>
+                    <td>{{ form.new_password1.errors }}
+                        <label for="id_new_password1">Nueva Contraseña:</label></td>
+                    <td>{{ form.new_password1 }}</td>
+                </tr>
+				<tr>
+                    <td>{{ form.new_password2.errors }}
+                        <label for="id_new_password2">Nueva Contraseña:</label></td>
+                    <td>{{ form.new_password2 }}</td>
+                </tr>
+
+
 				<span style='margin-bottom: 12px;'></span>
-				<button type="submit" class='btn btn-block btn-info'>Guardar</button>
+				<button type="submit" class="btn btn-dark btn-block align-bottom ld-ext-right" >Guardar</button>
 			</form>
 	    </div>
   	</div>
 </div>
 {% endblock %}
+
+
+
+
+
