--- a/web/accounting/templates/accounting/accounting.html
+++ b/web/accounting/templates/accounting/accounting.html
@@ -10,19 +10,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mb-4" style="max-width:100%">
-
-  <div class="row">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-11">
-      <h5 class="mb-4">Contabilidad</h5>
-    </div>
-  </div>
-</div>
-
+{% load custom_tags %}
+<div class="container" style="max-width:100%">
   <div class="card mb-1">
     <div class="card-body">
+      <h5 class="mb-4">Contabilidad</h5>
         <form class="needs-validation" action="/accounting/" method="post" id="form" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         <div class="row mt-4">
@@ -92,13 +84,14 @@
             });
           </script>
 
-          <div class="col-md-1">
+          <div class="col-md-2">
             <label for="id_ajax_list">&nbsp</label>
             <button class="btn btn-dark btn-block align-bottom ld-ext-left" id="btn_see" type="button">
               Buscar
               <div class="ld ld-ring ld-spin"></div>
             </button>
           </div>
+
           <div class="col-md-2">
             <label for="id_appraisalTimeRequest">&nbsp</label>
             <button class="btn btn-dark btn-block align-bottom ld-ext-right" id="btn_generate" formmethod="post">
@@ -106,25 +99,31 @@
               <div class="ld ld-ring ld-spin"></div>
             </button>
           </div>
+
         </div>
       </form>
     </div>
   </div>
 
 
-<div class="card mb-1" id="div_accounting">
-  <div class="card-body">
-    <p class="card-title">Previsualización</p>
-    <table class="table table-sm table-borderless table-appraisals"  style="font-size:0.8em;"  id="table_accounting">
-          {% include 'accounting/accounting_table.html' %}
-    </table>
+  <div class="card mb-1" id="div_accounting">
+    <div class="card-body">
+      <p class="card-title">Previsualización</p>
+      <table class="table table-sm table-borderless table-appraisals"  style="font-size:0.8em;"  id="table_accounting">
+            {% include 'accounting/accounting_table.html' %}
+      </table>
+    </div>
   </div>
+
+
+
+
+
 </div>
 
 <script src="{% static 'accounting/js/tools.js' %}" type="text/javascript"></script>
 
 <script src="{% static 'accounting/js/search.js' %}" type="text/javascript"></script>
-
 
 <script>
    $("#btn_see").on("click", function (event) {
@@ -159,6 +158,44 @@
 </script>
 
 
+
+
 {% endblock %}
 
+<script>
+  var token = '{{csrf_token}}';
 
+  $("#btn_generate").on("click", function (event) {
+    //button for loading in export
+    var initial = $('#id_appraisalTimeRequest').val();
+    var end =  $('#id_appraisalTimeRequest2').val();
+    var tasador =  $('#id_tasador').val();
+    var url = "{% url 'ajax_accountingView_url' %}";
+    var url2 = "{% url 'ajax_accountingView_url2' %}";
+    btn = $(this);
+    btn.addClass('running');
+    btn.prop('disabled', true);
+
+    $.ajax({
+       headers: { "X-CSRFToken": token },
+       url: url2,
+       type: 'post',
+       data: {'appraisalTimeRequest':initial, 'appraisalTimeRequest2':end, 'tasador':tasador, marcador:"True"},
+
+       error: function () {
+           alert("Error al seleccionar vairables.");
+           btn.removeClass('running');
+           btn.prop('disabled', false);
+           return false;
+           console.log("2");
+       },
+       success: function (data) {
+         btn.removeClass('running');
+         btn.prop('disabled', false);
+         //replaceTable("table_accounting",data)
+         // assignTableActions()
+       }
+     });
+  });
+
+</script>
