--- a/web/list/templates/list/modals_assign_tasador.html
+++ b/web/list/templates/list/modals_assign_tasador.html
@@ -14,21 +14,22 @@
           Cargando tasadores
           <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
         </div>
-        <input class="form-control mb-2" placeholder="Buscar tasador" id="tasador_buscar" style="display:none;"></input>
-        <div class="form-row">
+        <div style="display:none;" id="tasador_buscar">
+          <div class="form-row">
+            <div class="form-group col-6">
+              <input class="form-control mb-2" placeholder="Buscar tasador" id="input_tasador_buscar">
+            </div>
             <div class="form-group col-6" id="region_select">
-              <label for="">Región</label>
-              {{form.addressRegion.label_tag}}
+              <!--{{form.addressRegion.label_tag}}-->
               {{form.addressRegion}}
             </div>
+            <!--
             <div class="form-group col-6" id="commune_select">
-              <label for="">Comuna</label>
               {{form.addressCommune.label_tag}}
               {{form.addressCommune}}
             </div>
+            -->
           </div>
-        <div class="alert alert-secondary">
-          Al momento de asignar un tasador, éste será notificado por correo electrónico. El tasador luego deberá aceptar la solicitud.
         </div>
 
         <table class="table table-sm table-borderless" id="table" style="display:none;">
@@ -42,7 +43,7 @@
           </thead>
           <tbody>
             {% for tasador in tasadores %}
-            <tr id="tasador_id" class="tasador" id_region="{{tasador.user.user.addressRegion.id}}" id_commune="{{tasador.user.user.addressCommune.id}}">
+            <tr id="tasador_id" class="tasador" data-id-region="{{tasador.user.user.addressRegion.id}}" data-id-commune="{{tasador.user.user.addressCommune.id}}">
               <td></td>
               <td id="tasador">
                 <div class="form-check">
@@ -60,6 +61,11 @@
             {% endfor %}
           </tbody>
         </table>
+        
+        <div class="alert alert-secondary">
+          Al momento de asignar un tasador, éste será notificado por correo electrónico. El tasador luego deberá aceptar la solicitud.
+        </div>
+
         <div class="modal-footer">
           <input id="modal_assign_tasador_appraisal_id" name="appraisal_id" type="hidden" value="">
           {% if appraisal.tasadorUser %}
@@ -93,16 +99,17 @@
       }
     });
   }
-  $("#tasador_buscar").on('keyup',function() {
+  $("#input_tasador_buscar").on('keyup',function() {
     val = $(this).val()
     search(val)
   })
-  $("#tasador_buscar").on('change',function() {
+  $("#input_tasador_buscar").on('change',function() {
     val = $(this).val()
     search(val)
   })
 </script>
 
+<!--
 <script>
   $("#id_addressRegion").change(function () {
     // get the url of the `load_cities` view
@@ -126,54 +133,27 @@
     });
   });
 </script>
+-->
 
 <script>
+  function validateRow(table,region) {
+    table.find('tr[class="tasador"]').each(function(i, el) {
+      if ($(el).data('id-region') != region) {
+        $(el).hide();
+      } else {
+        $(el).show();
+      }
+    });
+  }
   $("#id_addressRegion").change(function() {
-  var region = $(this).val();
-
-  function validateRow(table) {
-        table.find('tr[class="tasador"]').each(function(i, el) {
-            if (el.getAttribute('id_region') != region){
-                $(el).hide();
-                }
-            else {
-                $(el).show();
-                }
-        });
-    }
-  jQuery('tbody').each(function(i, el) {
-        validateRow(jQuery(this));
+    var region = $(this).val();
+    validateRow($("#table"),region)
+    /*
+    $('tbody').each(function(i, el) {
+      validateRow($(this));
     }).find('tr[id_region="tasador"]').change(function() {
-        validateRow(jQuery(this).closest('tr'));
+      validateRow($(this).closest('tr'));
     });
-
-  })
-</script>
-
-<script>
-  $("#id_addressCommune").change(function() {
-  var commune = $(this).val();
-  console.log(commune);
-
-  function validateRow(table) {
-        var valid = true;
-
-        table.find('tr[class="tasador"]').each(function(i, el) {
-            if (el.getAttribute('id_commune') != commune){
-                $(el).hide();
-                }
-            else {
-                $(el).show();
-                }
-
-        });
-    }
-
-  jQuery('tbody').each(function(i, el) {
-        validateRow(jQuery(this));
-    }).find('tr[id_region="tasador"]').change(function() {
-        validateRow(jQuery(this).closest('tr'));
-    });
-
+    */
   })
 </script>
