Visador list updated. Models for icons

--- a/web/archive/templates/archive/appraisals.html
+++ b/web/archive/templates/archive/appraisals.html
@@ -4,7 +4,7 @@
     <div class="alert alert-primary mb-0" role="alert" id="div_alert_search" style="display:none;">
       No hay tasaciones por asignar
     </div>
-    <table class="table table-sm table-borderless table-appraisals" id="table_search" style="font-size:0.8em;">
+    <table class="table table-sm table-borderless table-appraisals" id="table_search" style="width:100%;font-size:0.8em;">
       {% include 'archive/appraisals_search.html' %}
     </table>
   </div>
