--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -50,7 +50,7 @@
     <div class="alert alert-primary mb-0" role="alert" id="div_alert_table_not_assigned" style="display:none;">
       No hay tasaciones por asignar
     </div>
-    <table class="table table-sm table-borderless table-appraisals" id="table_not_assigned" style="display:none;font-size:0.8em;">
+    <table class="table table-sm table-borderless table-appraisals" id="table_not_assigned" style="width:100%;display:none;font-size:0.8em;">
       {% include 'list/appraisals_table_not_assigned.html' %}
     </table>
   </div>
@@ -66,7 +66,7 @@
     <div class="alert alert-primary mb-0" role="alert" id="div_alert_table_not_accepted" style="display:none;">
       No hay tasaciones por aceptar
     </div>
-    <table class="table table-sm table-borderless table-appraisals" id="table_not_accepted" style="display:none;font-size:0.8em;">
+    <table class="table table-sm table-borderless table-appraisals" id="table_not_accepted" style="width:100%;display:none;font-size:0.8em;">
       {% include 'list/appraisals_table_not_accepted.html' %}      
     </table>
   </div>
@@ -80,7 +80,7 @@
     <div class="alert alert-primary" role="alert" id="div_alert_table_in_appraisal" style="display: none;">
       No hay tasaciones en proceso
     </div>
-    <table class="table table-sm table-borderless table-appraisals" id="table_in_appraisal" style="display:none;font-size:0.8em;">
+    <table class="table table-sm table-borderless table-appraisals" id="table_in_appraisal" style="width:100%;display:none;font-size:0.8em;">
       {% include 'list/appraisals_table_in_appraisal.html' %}
     </table>
   </div>
@@ -94,7 +94,7 @@
     <div class="alert alert-primary" role="alert" id="div_alert_table_in_revision" style="display: none;">
       No hay tasaciones en visación
     </div>
-    <table class="table table-sm table-borderless table-appraisals" id="table_in_revision" style="display:none;font-size:0.8em;">
+    <table class="table table-sm table-borderless table-appraisals" id="table_in_revision" style="width:100%;display:none;font-size:0.8em;">
       {% include 'list/appraisals_table_in_revision.html' %}
     </table>
   </div>
@@ -108,7 +108,7 @@
     <div class="alert alert-primary" role="alert" id="div_alert_table_sent" style="display: none;">
       No hay tasaciones enviadas
     </div>
-    <table class="table table-sm table-borderless" id="table_sent" style="display:none;font-size:0.8em;">
+    <table class="table table-sm table-borderless table-sent" id="table_sent" style="width:100%;display:none;font-size:0.8em;">
       {% include 'list/appraisals_table_sent.html' %}
     </table>
   </div>
