--- a/web/user/templates/user/password_reset_form.html
+++ b/web/user/templates/user/password_reset_form.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<div style="margin-left:auto;margin-right:auto;width:400px;">
+<div class="card" style="width:400px;margin-left:auto;margin-right:auto;">
+<div class="card-body">
 
 <div class="alert alert-info">
 <p style="text-align:left"> Para recuperar su contraseña, por favor introduzca el correo electrónico que utilizó para registrarse. </p>
@@ -16,6 +17,7 @@
     <input type="submit" class="btn btn-dark btn-block" value="Resetear contraseña" />
 </form>
 
+</div>
 </div>
 
 {% endblock %}
