--- a/web/home/templates/home/index.html
+++ b/web/home/templates/home/index.html
@@ -2,9 +2,13 @@
 
 {% load static %}
 
+{% block head %}
+  <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<div class="jumbotron">	
+<div class="jumbotron" style="background:#ebf3f0;">
 	<div class="row">
 		<div class="col-1">
 		</div>
