--- a/web/list/templates/list/appraisals_table_header.html
+++ b/web/list/templates/list/appraisals_table_header.html
@@ -3,7 +3,7 @@
     <th scope="col" style="width:100px">Cliente</th>
     <th scope="col" style="width:80px">Código</th>
     <th scope="col" style="width:40px;text-align:center;">T.</th>
-    <th scope="col" style="width:500px;">Dirección</th>
+    <th scope="col" style="width:auto">Dirección</th>
     <th scope="col" style="width:160px;">Tasador</th>
     {% if state != 4 %}
     <th scope="col" style="width:160px;">Visador</th>
@@ -23,5 +23,5 @@
     {% else %}
     <th scope="col" style="width:100px;">Entrega</th>
     <th scope="col" style="width:70px;"></th>
-    {% endif %}    
+    {% endif %}
 </tr>
