--- a/web/user/templates/user/password_reset_confirm.html
+++ b/web/user/templates/user/password_reset_confirm.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<div style="margin-left:auto;margin-right:auto;width:400px;">
+<div class="card" style="width:500px;margin-left:auto;margin-right:auto;">
+<div class="card-body">
 
     {% if validlink %}
         <div class="alert alert-info">Ingrese y confirme su nueva contraseña.</div>
@@ -32,6 +33,7 @@
         <p>El link ya ha sido utilizado, pruebe de nuevo desde el principio.</p>
     {% endif %}
 
+</div>
 </div>
 
 {% endblock %}
