inicio de modal expences

--- a/web/list/templates/list/appraisals_table_in_appraisal_tr.html
+++ b/web/list/templates/list/appraisals_table_in_appraisal_tr.html
@@ -76,5 +76,6 @@
 <td style="text-align:right;">
   {% with table="in_appraisal" %}
     {% include 'list/btn_logbook.html' %}
+    {% include 'list/btn_expenses.html' %}
   {% endwith %}
 </td>
