--- a/web/list/templates/list/modals.html
+++ b/web/list/templates/list/modals.html
@@ -14,6 +14,11 @@
   {% include 'list/modals_evaluate.html' %}
 </div>
 
+<div class="modal fade" id="modal_expenses" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
+  {% include 'list/modals_expenses.html' %}
+</div>
+
+
 
 <div class="modal fade" id="modal_unassign_tasador" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
