--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -19,6 +19,7 @@
   ajax_upload_report_url = "{% url 'ajax_upload_report_url' %}"
   ajax_mark_as_returned_url = "{% url 'ajax_mark_as_returned_url' %}"
   ajax_get_appraisal_row_url = "{% url 'ajax_get_appraisal_row_url' %}"
+  ajax_appraisal_expenses = "{% url 'ajax_expenses_url' %}"
 </script>
 
 {% load custom_tags %}
