--- a/web/list/templates/list/index.html
+++ b/web/list/templates/list/index.html
@@ -4,8 +4,9 @@
 {% block head %}
   <link rel="stylesheet" href="{% static 'list/css/main.css' %}">
   <link rel="stylesheet" href="{% static 'list/css/logbook.css' %}">
+  <link rel="stylesheet" href="{% static 'list/css/modals_expenses.css' %}">
   <link rel="stylesheet" href="{% static 'list/css/table_search.css' %}">
-  {% load static %}
+
 {% endblock %}
 
 {% block content %}
