--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -19,7 +19,7 @@
   ajax_upload_report_url = "{% url 'ajax_upload_report_url' %}"
   ajax_mark_as_returned_url = "{% url 'ajax_mark_as_returned_url' %}"
   ajax_get_appraisal_row_url = "{% url 'ajax_get_appraisal_row_url' %}"
-  ajax_appraisal_expenses = "{% url 'ajax_expenses_url' %}"
+  ajax_appraisal_expenses = "{% url 'ajax_appraisal_expenses_url' %}"
 </script>
 
 {% load custom_tags %}
@@ -180,6 +180,59 @@
         }
       });
     });
+
+
+
+
+
+
+
+
+
+    $(".btn_expenses").unbind()
+    $(".btn_expenses").off()
+    $(".btn_expenses").on("click", function (event) {
+      // Opens logbook modal, and gets the data of the comments
+      // from an AJAX request. Also changes a hidden input to
+      // the appraisal id to have at the post request.
+      event.preventDefault();
+      btn = $(this)
+      table = btn.data('table')
+      tr = $(this).closest('tr')
+      $("#modal_expenses").data('table',table)
+      appraisal_id = btn.val(); // button has id of appraisal
+      btn_loading(btn)
+      // ajax
+      var url = $(this).attr("data-expenses-url");
+      $.ajax({
+        url: url,
+        type: 'get',
+        data: {'appraisal_id':appraisal_id,'table':table},
+        error: function () {
+            alert("Error al abrir la bitacora.");
+            return false;
+        },
+        success: function (data) {
+          $('#modal_expenses').modal('show');
+          $('#modal_expenses').find('.modal-expenses-body').html($.trim(data));
+          $("#in_appraisal_id").val(appraisal_id); // hidden input
+          $("input#table_id").attr("value",table);
+          tr.removeClass("notification")
+
+
+        },
+        complete: function (data) {
+          btn_idle(btn)
+          assignLogbookModalActions();
+          if (table != "not_accepted") {
+            $("#id_event").trigger("change")
+          }
+        }
+      });
+    });
+
+
+
 
     $(".btn_archive_appraisal_modal").unbind()
     $(".btn_archive_appraisal_modal").off()
