--- a/web/list/templates/list/modals.html
+++ b/web/list/templates/list/modals.html
@@ -14,9 +14,23 @@
   {% include 'list/modals_evaluate.html' %}
 </div>
 
+
 <div class="modal fade" id="modal_expenses" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  {% include 'list/modals_expenses.html' %}
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="expenses_laber">Gastos de la Tasación</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-expenses-body" id="expenses_body">
+      </div>
+    </div>
+  </div>
 </div>
+
+
 
 
 
