--- a/web/list/templates/list/expenses.html
+++ b/web/list/templates/list/expenses.html
@@ -1,5 +1,5 @@
 {% load custom_tags %}
-<li class="list-group-item {{hnc|yesno:"list-group-item-warning"}} id="{{expense.id}}"}>
+<li class="list-group-item" id="{{expense.id}}"}>
   <div class="row">
     <div class="col-9">
         <span style="font-size:0.9em;color:#000;">{{expense.description}}</span>
@@ -18,3 +18,4 @@
     </div>
   </div>
 </li>
+
