--- a/web/list/templates/list/modals_expenses.html
+++ b/web/list/templates/list/modals_expenses.html
@@ -3,19 +3,18 @@
 {{form_comment.media}}
 
 
-<div class="row mb-2">
+
+<div class="row mb-2 col-12">
   <div class="col-8">
     <a href="{{appraisal.url}}">
       <p style="display:inline-block;vertical-align:-webkit-baseline-middle;margin-bottom:0em;">
         {{appraisal.real_estates.first.address}}
-        {% if appraisal.real_estates.all|length > 1 %}
         (+{{appraisal.real_estates.all|length|sub:1}})
-        {% endif %}
       </p>
     </a>
   </div>
 </div>
-<div class="row">
+<div class="row col-12">
   <div class="col-6">
     <p style="display:inline-block;vertical-align:-webkit-baseline-middle;margin-bottom:0em;">
       {{appraisal.solicitanteVerbose}} ({{appraisal.solicitanteCodigo}})
@@ -36,18 +35,18 @@
 {% csrf_token %}
 <div class="row" style="width:90%;margin-left:auto;margin-right:auto;">
   <div class="col-12">
-
       <div class="row">
-        <div class="col-6">
-          <div class="form-group" id="div_description">
+
+          <div class="form-group col-6" id="div_description">
             <small>{{ form_expenses.description.label_tag}}</small>
             {{ form_expenses.description }}
           </div>
-          <div class="form-group" id="div_totalPrice">
+
+          <div class="form-group col-6" id="div_totalPrice">
             <small>{{ form_expenses.totalPrice.label_tag }}</small>
               {{ form_expenses.totalPrice }}
           </div>
-        </div>
+
       </div>
 
       <div class="form-group row" id="div_expenses_btn">
@@ -83,76 +82,82 @@
 </div>
 
 <script>
-  $("#expenses_delete").unbind()
-  $("#expenses_delete").off()
-  $("#expenses_delete").on("click", function (event) {
-    // Click of borrar gasto button in expenses form.
-    event.preventDefault();
-    btn = $(this)
-    btn_loading(btn,hide_text=true)
-    var url = $("#expenses_delete").attr("data-expenses-delete-url");
-    var appraisal_id = $("#in_appraisal_id").val()
-    var expense_id = $("#expenses_delete").attr("id2")
-    var csrftoken = $("[name=csrfmiddlewaretoken]").val();
+  var assignExpensesModalActions = function() {
 
-    console.log(csrftoken);
+      $("#expenses_delete").unbind()
+      $("#expenses_delete").off()
+      $("#expenses_delete").on("click", function (event) {
+        // Click of borrar gasto button in expenses form.
+        event.preventDefault();
+        btn = $(this)
+        btn_loading(btn,hide_text=true)
+        var url = $("#expenses_delete").attr("data-expenses-delete-url");
+        var appraisal_id = $("#in_appraisal_id").val()
+        var expense_id = $("#expenses_delete").attr("id2")
+        var csrftoken = $("[name=csrfmiddlewaretoken]").val();
 
-    $.ajax({
-      url: url,
-      type: 'post',
-      data: {"expense_id":expense_id, "appraisal_id":appraisal_id},
-      headers:{"X-CSRFToken": csrftoken},
-      error: function () {
-        btn_idle(btn)
-        alert("Error al borrar gasto.");
-        return false;
-      },
-      success: function (data) {
-        $("li[id='"+expense_id +"']").hide();
-        console.log(("li[id='" + expense_id +"']"))
-        var element = $($.parseHTML(data))
-        element.hide()
-        //$("#expenses_list").remove(element);
-        element.slideUp()
-        btn_idle(btn)
+        $.ajax({
+          url: url,
+          type: 'post',
+          data: {"expense_id":expense_id, "appraisal_id":appraisal_id},
+          headers:{"X-CSRFToken": csrftoken},
+          error: function () {
+            btn_idle(btn)
+            alert("Error al borrar gasto.");
+            return false;
+          },
+          success: function (data) {
+            $("li[id='"+expense_id +"']").remove();
+            btn_idle(btn)
 
-      },
-    });
-  });
-</script>
+          },
+          complete: function (data) {
+                assignExpensesModalActions();
+          }
+        });
+      });
 
-<script>
-  $("#btn_expenses2").unbind()
-  $("#btn_expenses2").off()
-  $("#btn_expenses2").on("click", function (event) {
-    // Click of registrar gasto button in expenses form.
-    event.preventDefault();
-    btn = $(this)
-    btn_loading(btn,hide_text=true)
-    var form = document.getElementById('form_expenses');
-    var formData = new FormData(form);
-    var url = $("#form_expenses").attr("data-expenses2-url");
-    var appraisal_id = $("#in_appraisal_id").val()
+      $("#btn_expenses2").unbind()
+      $("#btn_expenses2").off()
+      $("#btn_expenses2").on("click", function (event) {
+        // Click of registrar gasto button in expenses form.
+        event.preventDefault();
+        btn = $(this)
+        btn_loading(btn,hide_text=true)
+        var form = document.getElementById('form_expenses');
+        var formData = new FormData(form);
+        var url = $("#form_expenses").attr("data-expenses2-url");
+        var appraisal_id = $("#in_appraisal_id").val()
 
-    $.ajax({
-      url: url,
-      type: 'post',
-      data: formData,
-      processData: false,
-      contentType: false,
-      error: function () {
-        btn_idle(btn)
-        alert("Error al ingresar gasto.");
-        return false;
-      },
-      success: function (data) {
-        var element = $($.parseHTML(data))
-        element.hide()
-        $("#expenses_list").prepend(element);
-        element.slideDown()
-        btn_idle(btn)
+        $.ajax({
+          url: url,
+          type: 'post',
+          data: formData,
+          processData: false,
+          contentType: false,
+          error: function () {
+            btn_idle(btn)
+            alert("Error al ingresar gasto.");
+            return false;
+          },
+          success: function (data) {
+            var element = $($.parseHTML(data))
+            element.hide()
+            $("#expenses_list").prepend(element);
+            element.slideDown()
+            btn_idle(btn)
 
-      },
-    });
-  });
+          },
+
+          complete: function (data) {
+                assignExpensesModalActions();
+                 $('#form_expenses')[0].reset();
+            }
+        });
+      });
+}
+
+$(document).ready(function($) {
+    assignExpensesModalActions();
+    })
 </script>
